fix: inline LottoNaviEngine logic into index.html to guarantee availability and resolve persistent defined error

--- a/index.html
+++ b/index.html
@@ -6320,11 +6320,194 @@
             </div> <!-- Close admin-modal-content -->
         </div> <!-- Close naviModal -->
 
-        <!-- Lotto Navi Data & Engine (Moved to bottom for guaranteed execution) -->
-        <script src="lotto_data.js?v=20260222-4" onerror="console.error('Failed to load lotto_data.js')"></script>
-        <script src="lotto_history_data.js?v=20260222-4"
-            onerror="console.error('Failed to load lotto_history_data.js')"></script>
-        <script src="lotto_navi.js?v=20260222-4" onerror="console.error('Failed to load lotto_navi.js')"></script>
+        <!-- Lotto Navi Data -->
+        <script src="lotto_data.js?v=20260222-6"
+            onerror="window.errLottoData=true; console.error('Failed to load lotto_data.js')"></script>
+        <script src="lotto_history_data.js?v=20260222-6"
+            onerror="window.errLottoHistory=true; console.error('Failed to load lotto_history_data.js')"></script>
+
+        <!-- Lotto Navi Engine (Inlined) -->
+        <script>
+            console.log("Lotto Navi engine inlined.");
+            class LottoNaviEngine {
+                constructor(historyData) {
+                    this.history = historyData; // { "회차": [n1, n2, n3, n4, n5, n6, bonus] }
+                    this.latestRound = Math.max(...Object.keys(historyData).map(Number));
+                }
+                calculateAC(numbers) {
+                    if (numbers.length !== 6) return 0;
+                    const sorted = [...numbers].sort((a, b) => a - b);
+                    const diffs = new Set();
+                    for (let i = 0; i < sorted.length; i++) {
+                        for (let j = i + 1; j < sorted.length; j++) {
+                            diffs.add(sorted[j] - sorted[i]);
+                        }
+                    }
+                    return diffs.size - 5;
+                }
+                calculateSum(numbers) {
+                    return numbers.reduce((a, b) => Number(a) + Number(b), 0);
+                }
+                calculateOddCount(numbers) {
+                    return numbers.filter(n => n % 2 !== 0).length;
+                }
+                getCarryOverCount(numbers, round = this.latestRound) {
+                    const prevNumbers = this.history[round]?.slice(0, 6) || [];
+                    return numbers.filter(n => prevNumbers.includes(n)).length;
+                }
+                getMissingDurations() {
+                    const durations = {};
+                    for (let i = 1; i <= 45; i++) {
+                        let weeks = 0;
+                        let found = false;
+                        while (!found && this.latestRound - weeks > 0) {
+                            const roundData = this.history[this.latestRound - weeks];
+                            if (roundData && roundData.slice(0, 6).map(Number).includes(i)) {
+                                found = true;
+                            } else {
+                                weeks++;
+                            }
+                        }
+                        durations[i] = weeks;
+                    }
+                    return durations;
+                }
+                getAIRecommendedMissingCapsules(exclude = []) {
+                    const durations = this.getMissingDurations();
+                    const excludeNums = exclude.map(Number);
+                    const pool = Object.keys(durations).filter(n => durations[n] >= 5).map(Number).filter(n => !excludeNums.includes(n));
+                    const weighted = pool.map(n => ({ num: n, weeks: durations[n], weight: this.calculateWeight(n) })).sort((a, b) => b.weight - a.weight);
+                    const selected = weighted.slice(0, 3);
+                    if (selected.length > 0) selected[0].isHighest = true;
+                    return selected;
+                }
+                getNeighborNumbers(round = this.latestRound) {
+                    const baseNumbers = this.history[round]?.slice(0, 6) || [];
+                    const neighbors = new Set();
+                    baseNumbers.forEach(n => { if (n > 1) neighbors.add(n - 1); if (n < 45) neighbors.add(n + 1); });
+                    return Array.from(neighbors).sort((a, b) => a - b);
+                }
+                getRegressionNumbers(cycle) {
+                    const targetRound = this.latestRound - cycle;
+                    return this.history[targetRound]?.slice(0, 6) || [];
+                }
+                getNumbersByEndingDigit(digit) {
+                    const results = [];
+                    for (let i = 1; i <= 45; i++) { if (i % 10 === digit) results.push(i); }
+                    return results;
+                }
+                calculateWeight(n, userPreference = 1.0) {
+                    const num = Number(n);
+                    let appearanceCount = 0;
+                    let totalRounds = Object.keys(this.history).length;
+                    for (const round in this.history) { if (this.history[round].slice(0, 6).map(Number).includes(num)) appearanceCount++; }
+                    const frequencyFactor = appearanceCount / totalRounds;
+                    let recentFactor = 1.0;
+                    for (let i = 0; i < 10; i++) {
+                        const r = this.latestRound - i;
+                        if (this.history[r]?.slice(0, 6).map(Number).includes(num)) { recentFactor += (10 - i) * 0.1; }
+                    }
+                    return frequencyFactor * recentFactor * userPreference;
+                }
+                getAIRecommendedCarryover(round = this.latestRound) {
+                    const baseNumbers = this.history[round]?.slice(0, 6) || [];
+                    const weighted = baseNumbers.map(n => ({ num: n, weight: this.calculateWeight(n) })).sort((a, b) => b.weight - a.weight);
+                    return weighted.slice(0, 2).map(x => x.num);
+                }
+                getAIRecommendedNeighbors(round = this.latestRound) {
+                    const baseNumbers = this.history[round]?.slice(0, 6) || [];
+                    const neighbors = this.getNeighborNumbers(round).filter(n => !baseNumbers.includes(n));
+                    const weighted = neighbors.map(n => ({ num: n, weight: this.calculateWeight(n) })).sort((a, b) => b.weight - a.weight);
+                    return weighted.slice(0, 2).map(x => x.num);
+                }
+                generateRecommendedNumbers(filters = {}) {
+                    const fixedNumbers = (filters.fixedNumbers || []).map(Number);
+                    const fixedCount = fixedNumbers.length;
+                    let pool = Array.from({ length: 45 }, (_, i) => i + 1).filter(n => !fixedNumbers.includes(n));
+                    const weightedPool = pool.map(n => ({ num: n, weight: this.calculateWeight(n, filters.userPref?.[n] || 1.0) })).sort((a, b) => b.weight - a.weight);
+                    let attempts = 0;
+                    while (attempts < 5000) {
+                        attempts++;
+                        const candidate = [...fixedNumbers];
+                        const tempPool = [...weightedPool];
+                        for (let i = 0; i < (6 - fixedCount); i++) {
+                            if (tempPool.length === 0) break;
+                            const pickLimit = Math.min(tempPool.length, 20);
+                            const idx = Math.floor(Math.random() * pickLimit);
+                            candidate.push(tempPool.splice(idx, 1)[0].num);
+                        }
+                        if (candidate.length < 6) continue;
+                        candidate.sort((a, b) => a - b);
+                        if (filters.minSum && this.calculateSum(candidate) < filters.minSum) continue;
+                        if (filters.maxSum && this.calculateSum(candidate) > filters.maxSum) continue;
+                        if (filters.minAC && this.calculateAC(candidate) < filters.minAC) continue;
+                        if (filters.exactOdd !== undefined && this.calculateOddCount(candidate) !== filters.exactOdd) continue;
+                        if (filters.exactCarry !== undefined && this.getCarryOverCount(candidate) !== filters.exactCarry) continue;
+                        if (filters.preferredEndingDigits && filters.preferredEndingDigits.length > 0) {
+                            const matches = candidate.filter(n => filters.preferredEndingDigits.includes(n % 10));
+                            if (matches.length < 1) continue;
+                        }
+                        return candidate;
+                    }
+                    return weightedPool.slice(0, 6).map(n => n.num);
+                }
+                getAIRecommendedBalanceNumbers(fixedNums, targetOddCount) {
+                    const fNums = (fixedNums || []).map(Number);
+                    const currentOddCount = fNums.filter(n => n % 2 !== 0).length;
+                    const remainingToFill = 6 - fNums.length;
+                    let neededOdd = Math.max(0, targetOddCount - currentOddCount);
+                    neededOdd = Math.min(remainingToFill, neededOdd);
+                    const neededEven = Math.max(0, remainingToFill - neededOdd);
+                    const pool = Array.from({ length: 45 }, (_, i) => i + 1).filter(n => !fNums.includes(n));
+                    const odds = pool.filter(n => n % 2 !== 0);
+                    const evens = pool.filter(n => n % 2 === 0);
+                    let bestCandidate = null;
+                    let bestScore = -1;
+                    for (let i = 0; i < 3000; i++) {
+                        const selectedOdds = this.sampleFromPool(odds, neededOdd);
+                        const selectedEvens = this.sampleFromPool(evens, neededEven);
+                        const candidate = [...selectedOdds, ...selectedEvens];
+                        const fullSet = [...fNums, ...candidate];
+                        const sum = this.calculateSum(fullSet);
+                        if (sum >= 100 && sum <= 170) {
+                            const totalWeight = candidate.reduce((acc, n) => acc + this.calculateWeight(n), 0);
+                            if (totalWeight > bestScore) { bestScore = totalWeight; bestCandidate = candidate; }
+                        }
+                    }
+                    if (!bestCandidate) {
+                        let minDiff = 1000;
+                        for (let i = 0; i < 500; i++) {
+                            const cand = [...this.sampleFromPool(odds, neededOdd), ...this.sampleFromPool(evens, neededEven)];
+                            const sum = this.calculateSum([...fNums, ...cand]);
+                            const diff = Math.min(Math.abs(sum - 100), Math.abs(sum - 170));
+                            if (diff < minDiff) { minDiff = diff; bestCandidate = cand; }
+                        }
+                    }
+                    return bestCandidate ? bestCandidate.sort((a, b) => a - b) : [];
+                }
+                sampleFromPool(pool, count) {
+                    const result = [];
+                    const temp = [...pool];
+                    for (let i = 0; i < count; i++) {
+                        if (temp.length === 0) break;
+                        const idx = Math.floor(Math.random() * temp.length);
+                        result.push(temp.splice(idx, 1)[0]);
+                    }
+                    return result;
+                }
+                getAIRecommendedEndings(fixedNums = []) {
+                    const endingCounts = {};
+                    for (let i = 0; i < 10; i++) endingCounts[i] = 0;
+                    const rounds = Object.keys(this.history).map(Number).sort((a, b) => b - a).slice(0, 10);
+                    rounds.forEach(r => { this.history[r].slice(0, 6).forEach(n => { endingCounts[n % 10]++; }); });
+                    fixedNums.forEach(n => { endingCounts[n % 10] += 5; });
+                    const sorted = Object.keys(endingCounts).map(Number).sort((a, b) => {
+                        return (endingCounts[b] + this.calculateWeight(b + 10)) - (endingCounts[a] + this.calculateWeight(a + 10));
+                    });
+                    return sorted.slice(0, 3);
+                }
+            }
+        </script>
 
         <script>
             console.log("Main script block initializing...");
@@ -6345,6 +6528,17 @@
             async function toggleNaviMode() {
                 if (!naviEngine) {
                     try {
+                        let errorMsg = '';
+                        if (window.errLottoData) errorMsg += '[lotto_data.js 로드 실패] ';
+                        if (window.errLottoHistory) errorMsg += '[lotto_history_data.js 로드 실패] ';
+                        if (window.errLottoNavi) errorMsg += '[lotto_navi.js 로드 실패] ';
+
+                        if (errorMsg) throw new Error('파일 로딩 실패 요인: ' + errorMsg);
+
+                        if (typeof LottoNaviEngine === 'undefined') {
+                            throw new Error('엔진(LottoNaviEngine)이 정의되지 않았습니다. 파일 로드 여부를 확인해주세요.');
+                        }
+
                         // Support both static script load (LOTTO_HISTORY) and dynamic fetch loader (window.lottoHistory)
                         const historyData = (typeof LOTTO_HISTORY !== 'undefined') ? LOTTO_HISTORY : window.lottoHistory;
 
@@ -6354,7 +6548,7 @@
                             throw new Error('데이터 원본을 찾을 수 없습니다.');
                         }
                     } catch (err) {
-                        alert('데이터 로드 실패: ' + err.message);
+                        alert('데이터 로드 실패: ' + err.message + '\n\n지속적으로 오류가 발생 시 브라우저 캐시 삭제 후 다시 시도해 주세요.');
                         return;
                     }
                 }
