--- a/index.html
+++ b/index.html
@@ -6032,8 +6032,8 @@
                                 <!-- 손가락 포인터 (슬라이더 연동) -->
                                 <div id="fingerPointerWrapStep3"
                                     style="position:relative; height:35px; width:100%; margin-top:-4px;">
-                                    <img id="fingerPointerStep3" src="left_finger.png" alt="select"
-                                        style="width:43px; height:43px; object-fit:contain; transition:transform 0.3s cubic-bezier(0.23,1,0.32,1); position:absolute; top:0; left:0%; transform:translateX(calc(33.3% - 21.5px)) rotate(90deg);">
+                                    <span id="fingerPointerStep3"
+                                        style="font-size:40px; line-height:1; transition:transform 0.3s cubic-bezier(0.23,1,0.32,1); position:absolute; top:0; left:0%; transform:translateX(calc(33.3% - 20px)); pointer-events:none;">👆</span>
                                 </div>
                             </div>
 
@@ -6068,8 +6068,8 @@
                                 <!-- 손가락 포인터 (공 선택시 이동) -->
                                 <div id="fingerPointerWrapStep3Balls"
                                     style="position:relative; height:58px; display:flex; align-items:flex-start; justify-content:center; margin-top:-5px; opacity:0; pointer-events:none; transition:opacity 0.3s;">
-                                    <img id="fingerPointerStep3Balls" src="left_finger.png" alt="select"
-                                        style="width:46px; height:46px; object-fit:contain; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%) rotate(90deg);">
+                                    <span id="fingerPointerStep3Balls"
+                                        style="font-size:40px; line-height:1; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%);">👆</span>
                                 </div>
                                 <div class="result-footer" style="margin-top: 5px; font-size: 9px; opacity: 0.8;">
                                     사용자 선택(<span id="step3FixedCount">0</span>) + AI 추천(<span
@@ -6148,8 +6148,8 @@
                                 <!-- 손가락 포인터 (선택시 이동) -->
                                 <div id="fingerPointerWrap"
                                     style="position:relative; height:58px; display:flex; align-items:flex-start; justify-content:center; margin-top:-5px;">
-                                    <img id="fingerPointer" src="left_finger.png" alt="select"
-                                        style="width:46px; height:46px; object-fit:contain; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%) rotate(90deg);">
+                                    <span id="fingerPointer"
+                                        style="font-size:43px; line-height:1; transition:transform 0.4s cubic-bezier(0.23,1,0.32,1); position:absolute; top:5px; left:50%; transform:translateX(-50%); pointer-events:none;">👆</span>
                                 </div>
 
                                 <!-- Candidate Grid -->
@@ -6204,7 +6204,7 @@
                                 <!-- 왼쪽 방향 손가락 프롬프트 -->
                                 <div class="finger-prompt-step5" id="step5FingerPrompt">
                                     <span class="finger-prompt-text">번호를 골라주세요!</span>
-                                    <img src="left_finger.png" alt="point left">
+                                    <span style="font-size:40px; line-height:1;">👈</span>
                                 </div>
                             </div>
                         </div>
@@ -6846,11 +6846,11 @@
                 if (fingerStep3 && wrapStep3) {
                     const pct = (parseInt(val) / 6) * 100; // 0~100%
                     const wrapW = wrapStep3.offsetWidth || 240;
-                    const fingerHalf = 21.5; // img width/2
+                    const fingerHalf = 20; // Updated for emoji 40px width/2
                     const minX = fingerHalf;
                     const maxX = wrapW - fingerHalf;
                     const px = minX + (pct / 100) * (maxX - minX);
-                    fingerStep3.style.transform = `translateX(${px - fingerHalf}px) rotate(90deg)`;
+                    fingerStep3.style.transform = `translateX(${px - fingerHalf}px)`;
                 }
 
                 // 1. AI 실시간 추출
@@ -6940,7 +6940,7 @@
                         const ballCenterX = ballRect.left + ballRect.width / 2;
                         const wrapCenterX = wrapRect.left + wrapRect.width / 2;
                         const offset = ballCenterX - wrapCenterX;
-                        fingerImg.style.transform = `translateX(calc(-50% + ${offset}px)) rotate(90deg)`;
+                        fingerImg.style.transform = `translateX(calc(-50% + ${offset}px))`;
                     }
                 }
 
@@ -6984,7 +6984,7 @@
                     const cardCenterX = cardRect.left + cardRect.width / 2;
                     const wrapCenterX = wrapRect.left + wrapRect.width / 2;
                     const offset = cardCenterX - wrapCenterX;
-                    finger.style.transform = `translateX(calc(-50% + ${offset}px)) rotate(90deg)`;
+                    finger.style.transform = `translateX(calc(-50% + ${offset}px))`;
                 }
 
                 // 2. Fetch Candidates
